<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Open GApps Updater</string>
    <string name="current_version">Current version</string>
    <string name="architecture">Architecture</string>
    <string name="update_not_required">No update required</string>
    <string name="last_version">The latest version</string>
    <string name="download">Download</string>
    <string name="install">Reboot to recovery and install</string>
    <string name="pause">Pause</string>
    <string name="resume">Continue</string>
    <string name="start_download_mbytes">0.0 / 0.0 MB</string>
    <string name="mbytes">MB</string>
    <string name="gapps_not_found">​GApps not found</string>
    <string name="md5_check_error">MD5 does not match, try downloading the file again</string>
    <string name="check_md5_and_reboot">MD5 check and reboot</string>
    <string name="cancel">Cancel</string>
    <string name="root_found">Root received, continue</string>
    <string name="root_not_found">Root not available</string>
    <string name="check_update">Check for updates</string>
    <string name="type">Type</string>
    <string name="platform_version">Platform version</string>
    <string name="no_perm_rw_storage">No write access to the internal memory, exit the program</string>
    <string name="update_available">There is an update</string>
    <string name="auto_check_update">Auto-check for updates</string>
    <string name="network_error">Network error</string>
    <string name="error_parse_json">Error while processing response from server</string>
    <string name="connection_error">Connection error</string>
    <string name="server_error">Server-side error</string>
    <string name="error_check_md5">Error checking MD5 sum, try download the file again</string>
    <string name="about">About</string>
    <string name="version_name">Version</string>
    <string name="version_code">Version code</string>
    <string name="about_4PDA">Topic of the application on the forum</string>
    <string name="error_check_md5_ErrorInSetupSavedState">Error checking MD5 sum, try restarting the application and downloading the file again</string>
    <string name="settings">Settings</string>
    <string name="external_download_enable">Download update file in external memory</string>
    <string name="external_memory_error">External memory is not available, use internal memory.</string>
    <string name="update_period">Check period for updates in days</string>

    <string name="description">
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
</resources>
